// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsPage when finished loading correctly renders 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Projects
  </PageHeader>
  <Component
    projects="list-of-projects"
  />
  <div>
    <Connect(ProjectFormContainer) />
  </div>
</div>
`;

exports[`ProjectsPage when loading renders with loading information 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Projects
  </PageHeader>
  <Alert
    bsClass="alert"
    bsStyle="info"
    closeLabel="Close alert"
  >
    Fetching projects...
  </Alert>
  <div>
    <Connect(ProjectFormContainer) />
  </div>
</div>
`;

exports[`ProjectsPage with error renders with error bar 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Projects
  </PageHeader>
  <Alert
    bsClass="alert"
    bsStyle="danger"
    closeLabel="Close alert"
  >
    Could not load projects | 
    an error
  </Alert>
  <div>
    <Connect(ProjectFormContainer) />
  </div>
</div>
`;
